[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scenes/Menu.gd" type="Script" id=1]
[ext_resource path="res://Image_assets/titlescreen.png" type="Texture" id=2]
[ext_resource path="res://Fonts/DS-DIGI.TTF" type="DynamicFontData" id=3]
[ext_resource path="res://Fonts/DS-DIGII.TTF" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 50
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 50
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 100
font_data = ExtResource( 4 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 294.0
margin_top = 95.0
margin_right = 469.0
margin_bottom = 274.0

[node name="Start_Button" type="Button" parent="VBoxContainer"]
margin_right = 175.0
margin_bottom = 57.0
custom_fonts/font = SubResource( 1 )
text = "Start"

[node name="Options_Button" type="Button" parent="VBoxContainer"]
margin_top = 61.0
margin_right = 175.0
margin_bottom = 118.0
custom_fonts/font = SubResource( 2 )
text = "Options"

[node name="Quit_Button" type="Button" parent="VBoxContainer"]
margin_top = 122.0
margin_right = 175.0
margin_bottom = 179.0
custom_fonts/font = SubResource( 3 )
text = "Quit"

[node name="BackgorundTemp" type="Sprite" parent="."]
show_behind_parent = true
position = Vector2( 513, 299.5 )
scale = Vector2( 0.5375, 0.566762 )
texture = ExtResource( 2 )

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="Label" type="Label" parent="VBoxContainer2"]
margin_right = 589.0
margin_bottom = 101.0
custom_fonts/font = SubResource( 4 )
text = "Mountain Rush"

[connection signal="pressed" from="VBoxContainer/Start_Button" to="." method="_on_Start_Button_pressed"]
[connection signal="pressed" from="VBoxContainer/Options_Button" to="." method="_on_Options_Button_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit_Button" to="." method="_on_Quit_Button_pressed"]
